--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Suliat's Portfolio</h1>
 						<p>I am Suliat Kazeem <a href="https://linktr.ee/suliatkazeem" target="_blank"> @suliatkazeem</a>, a cybersecurity student at the University of Kent specializing in cloud computing and DevSecOps. I am proficient in AWS tools like EC2, S3, and Lambda, with a focus on cloud security and technical support. I believe in leveraging cloud technologies and cybersecurity practices to protect digital infrastructures and ensure secure environments.</p>
 						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
+							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Scroll Down</a></li>
 						</ul>
 					</div>
 
@@ -49,7 +49,7 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<h2><a href="https://github.com/SuliatKazeem/Automating-Vprofile-setup.git">Automating V-Profile Setup/a></h2>
+									<h2><a href="https://github.com/SuliatKazeem/Automating-Vprofile-setup.git">Automating V-Profile Setup</h2>
 									<p>An automated V-Profile setup streamlines configuring virtual profiles by automating tasks such as system configuration, security settings, and resource allocation. This reduces manual effort, ensures consistency, and enhances efficiency in managing virtual environments.</p>
 								</header>
 								<a href="https://github.com/SuliatKazeem/Automating-Vprofile-setup.git" class="image main"><img src="images/pic01.jpg" alt="" /></a>
@@ -71,7 +71,18 @@
 									<ul class="actions special">
 										<li><a href="https://github.com/SuliatKazeem/Automating-Wordpress-Setup.git" class="button">View Project</a></li>
 									</ul>
-								</article>			
+								</article>
+								<article>
+									<header>										
+										<h2><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git">Automating AWS Infrastructure and Kubernetes Management with Terraform<br />
+										ipsum faucibus</a></h2>
+									</header>
+									<a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<p>This guide walks through the process of automating the setup of AWS infrastructure using Terraform, specifically focusing on security groups and EC2 instances. After setting up an EC2 instance, users can retrieve the Jenkins admin password for server access. The instructions also cover key Kubernetes management commands, including creating and managing namespaces, and cleaning up unused Docker images. Additionally, users can learn how to create and delete an EKS cluster using eksctl, enabling easy orchestration of Kubernetes environments on AWS.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git">View Project</a></li>
+									</ul>
+								</article>																
 							</section>
 
 						<!-- Footer -->
@@ -104,7 +115,7 @@
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
-									<li><a href="https://www.linkedin.com/in/suliatkazeem/" target="_blank" class="icon brands alt fa-LinkedIn"><span class="label">LinkedIn</span></a></li>								
+									<li><a href="https://www.linkedin.com/in/suliatkazeem/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>								
 									<li><a href="https://github.com/suliatkazeem" target="_blank" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>					
 								</ul>
 							</section>
