--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 						<h1>Suliat's Portfolio</h1>
 						<p>I am Suliat Kazeem <a href="https://linktr.ee/suliatkazeem" target="_blank"> @suliatkazeem</a>, a cybersecurity student at the University of Kent specializing in cloud computing and DevSecOps. I am proficient in AWS tools like EC2, S3, and Lambda, with a focus on cloud security and technical support. I believe in leveraging cloud technologies and cybersecurity practices to protect digital infrastructures and ensure secure environments.</p>
 						<ul class="actions">
-							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Scroll Down</a></li>
+							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
 					</div>
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"/a>
+						<a href="index.html" class="logo">Scroll Down</a>
 					</header>
 
 				<!-- Nav -->
@@ -54,7 +54,7 @@
 								</header>
 								<a href="https://github.com/SuliatKazeem/Automating-Vprofile-setup.git" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">View Project</a></li>
+									<li><a href="https://github.com/SuliatKazeem/Automating-Vprofile-setup.git" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -63,8 +63,7 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/SuliatKazeem/Automating-Wordpress-Setup.git">Automating WordPress Setup<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="https://github.com/SuliatKazeem/Automating-Wordpress-Setup.git">Automating WordPress Setup</h2>
 									</header>
 									<a href="https://github.com/SuliatKazeem/Automating-Wordpress-Setup.git" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>This project automates the deployment of a WordPress website, including server configuration, database setup, and plugin installation, using tools like Docker and bash scripts. It streamlines the process, saving time and ensuring consistency in WordPress environment setup.</p>
@@ -74,11 +73,10 @@
 								</article>
 								<article>
 									<header>										
-										<h2><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git">Automating AWS Infrastructure and Kubernetes Management with Terraform<br />
-										ipsum faucibus</a></h2>
+										<h2><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git">Automating AWS Infrastructure and Kubernetes Management with Terraform</h2>
 									</header>
 									<a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>This guide walks through the process of automating the setup of AWS infrastructure using Terraform, specifically focusing on security groups and EC2 instances. After setting up an EC2 instance, users can retrieve the Jenkins admin password for server access. The instructions also cover key Kubernetes management commands, including creating and managing namespaces, and cleaning up unused Docker images. Additionally, users can learn how to create and delete an EKS cluster using eksctl, enabling easy orchestration of Kubernetes environments on AWS.</p>
+									<p>This guide walks through the process of automating the setup of AWS infrastructure using Terraform, specifically focusing on security groups and EC2 instances. After setting up an EC2 instance, users can retrieve the Jenkins admin password for server access.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git">View Project</a></li>
 									</ul>
