--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 									</header>
 									<a href="https://github.com/SuliatKazeem/Automating-Wordpress-Setup.git" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 									<p>This project automates the deployment of a WordPress website, including server configuration, database setup, and plugin installation, using tools like Docker and bash scripts. 
-										It streamlines the process, saving time and ensuring consistency in WordPress environment setup.</p>
+										It streamlines the process, saving time and ensuring consistency in WordPress environment setup.By automating these tasks, the project minimizes manual intervention, allowing developers to launch and manage environments with ease and scalability quickly.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/SuliatKazeem/Automating-Wordpress-Setup.git" class="button">View Project</a></li>
 									</ul>
