--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
-							<li><a href="generic.html">Education</a></li>						
+							<li><a href="elements.html">Education</a></li>						
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/suliatkazeem/" target="_blank" class="icon brands alt fa-linkedin"><span class="label">LinkedIn</span></a></li>								
@@ -86,7 +86,35 @@
 									<ul class="actions special">
 										<li><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git">View Project</a></li>
 									</ul>
-								</article>																
+								</article>
+
+								<article>
+									<header>
+										
+										<h2><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git">Automating AWS Infrastructure and Kubernetes Management with Terraform <br />
+									       </a></h2>
+									</header>
+									<a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<p>This guide walks through the process of automating the setup of AWS infrastructure using Terraform, specifically focusing on security groups and EC2 instances. 
+										After setting up an EC2 instance, users can retrieve the Jenkins admin password for server access.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git">View Project</a></li>
+									</ul>
+								</article>
+
+								<article>
+									<header>
+										
+										<h2><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git">Automating AWS Infrastructure and Kubernetes Management with Terraform <br />
+									       </a></h2>
+									</header>
+									<a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<p>This guide walks through the process of automating the setup of AWS infrastructure using Terraform, specifically focusing on security groups and EC2 instances. 
+										After setting up an EC2 instance, users can retrieve the Jenkins admin password for server access.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git">View Project</a></li>
+									</ul>
+								</article>
 							</section>
 
 						<!-- Footer -->
