Picture Update index.html

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<h2><a href="https://github.com/SuliatKazeem/Automating-Vprofile-setup.git">Automating V-Profile Setup</h2>
 									<p>An automated V-Profile setup streamlines configuring virtual profiles by automating tasks such as system configuration, security settings, and resource allocation. This reduces manual effort, ensures consistency, and enhances efficiency in managing virtual environments.</p>
 								</header>
-								<a href="https://github.com/SuliatKazeem/Automating-Vprofile-setup.git" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="https://github.com/SuliatKazeem/Automating-Vprofile-setup.git" class="image main"><img src="images/imagespic01.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/SuliatKazeem/Automating-Vprofile-setup.git" class="button large">View Project</a></li>
 								</ul>
@@ -66,7 +66,7 @@
 										<h2><a href="https://github.com/SuliatKazeem/Automating-Wordpress-Setup.git">Automating WordPress Setup <br />
 									       </a></h2>
 									</header>
-									<a href="https://github.com/SuliatKazeem/Automating-Wordpress-Setup.git" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://github.com/SuliatKazeem/Automating-Wordpress-Setup.git" class="image fit"><img src="images/wordpress.png" alt="" /></a>
 									<p>This project automates the deployment of a WordPress website, including server configuration, database setup, and plugin installation, using tools like Docker and bash scripts. 
 										It streamlines the process, saving time and ensuring consistency in WordPress environment setup. By automating these tasks, the project minimizes manual intervention.</p>
 									<ul class="actions special">
@@ -80,11 +80,11 @@
 										<h2><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git">Automating AWS Infrastructure and Kubernetes Management with Terraform <br />
 									       </a></h2>
 									</header>
-									<a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git" class="image fit"><img src="images/Terraform.png" alt="" /></a>
 									<p>This guide walks through the process of automating the setup of AWS infrastructure using Terraform, specifically focusing on security groups and EC2 instances. 
 										After setting up an EC2 instance, users can retrieve the Jenkins admin password for server access.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git">View Project</a></li>
+										<li><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git" class="button">View Project</a></li>
 									</ul>
 								</article>
 
@@ -94,25 +94,25 @@
 										<h2><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git">Automating AWS Infrastructure and Kubernetes Management with Terraform <br />
 									       </a></h2>
 									</header>
-									<a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+									<a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git" class="image fit"><img src="images/Terraform.png" alt="" /></a>
 									<p>This guide walks through the process of automating the setup of AWS infrastructure using Terraform, specifically focusing on security groups and EC2 instances. 
 										After setting up an EC2 instance, users can retrieve the Jenkins admin password for server access.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git">View Project</a></li>
+										<li><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git" class="button">View Project</a></li>
 									</ul>
 								</article>
 
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git">Automating AWS Infrastructure and Kubernetes Management with Terraform <br />
+										<h2><a href="https://github.com/SuliatKazeem/Automating-EBS-Volume-Creation-Partitioning-Formatting-and-Mounting-via-Web-Service.git">Automating EBS Volume Creation Partitioning Formatting and Mounting via Web-Service <br />
 									       </a></h2>
 									</header>
-									<a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-									<p>This guide walks through the process of automating the setup of AWS infrastructure using Terraform, specifically focusing on security groups and EC2 instances. 
-										After setting up an EC2 instance, users can retrieve the Jenkins admin password for server access.</p>
+									<a href="https://github.com/SuliatKazeem/Automating-EBS-Volume-Creation-Partitioning-Formatting-and-Mounting-via-Web-Service.git" class="image fit"><img src="images/aws.png" alt="" /></a>
+									<p>This project automates creating, partitioning, formatting, and mounting AWS Elastic Block Store (EBS) volumes through a web service application. 
+										It simplifies storage management by allowing users to dynamically attach and configure volumes on EC2 instances, ensuring efficient use of resources and reducing manual setup.</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/SuliatKazeem/Automating-AWS-Infrastructure-and-Kubernetes-Management-with-Terraform.git">View Project</a></li>
+										<li><a href="https://github.com/SuliatKazeem/Automating-EBS-Volume-Creation-Partitioning-Formatting-and-Mounting-via-Web-Service.git" class="button">View Project</a></li>
 									</ul>
 								</article>
 							</section>
